fix-bug: layout bug fixed ,  cards added

--- a/product/product.css
+++ b/product/product.css
@@ -9,7 +9,17 @@ body{
     background-color: var(--bg-color);
 }
 
-
+.app-container{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-areas: 
+    "header header header header header "
+    "sideBar  p-display p-display p-display p-display"
+    "sideBar  p-display p-display p-display p-display"
+    "sideBar  p-display p-display p-display p-display";
+    gap: 15px;
+    /* "sideBar  p-display p-display p-display p-display"; */
+}
 
 .nav{
     grid-area: header;
@@ -67,6 +77,7 @@ body{
 .product-side-bar{
     display: flex;
     flex-direction: column;
+    grid-area: sideBar;
     
 }
 
@@ -134,40 +145,47 @@ body{
 /* display */
 
 .product-display{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-area: p-display;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     justify-items: flex-start;
-    grid-column-gap: 2rem;
     width: 100%;
     margin: 0 auto;
     overflow-y: scroll;
+    height: 100vh;
 
 }
 
 .card-container{
-    border: 1px solid black;
     background-color: blanchedalmond;
     display: flex;
     flex-direction: column;
-    max-height: 10rem;
+    /* height: 2rem; */
+    margin: 1rem;
+    padding: 1rem;
+    box-shadow:2px 2px 2px 2px #ccc;
 }
 
 .card-img-top{
-    width: 18rem;
+    width: 8rem;
 }
 
-.card-body{
-    padding: 5%;
-}
 
 .btn-card{
    background-color:rgb(0,105,218);
-   padding: 3%;
    text-decoration: none;
    color: white;
    border-radius: 2%;
+   width: max-content;
+   height: max-content;
+   padding:0.5rem
 }
 
 .btn-card:hover{
     background-color:rgb(47, 141, 241);
+}
+
+.discount-para{
+    color: var(--gray-color);
 }
